tests/baselines/reference/paramTagNestedWithoutTopLevelObject4(strict=true).errors.txt
paramTagNestedWithoutTopLevelObject4.js(2,20): error TS8032: Qualified name 'xyz.bar.p' is not allowed without a leading '@param {object} xyz.bar'.
paramTagNestedWithoutTopLevelObject4.js(4,12): error TS7006: Parameter 'xyz' implicitly has an 'any' type.


==== paramTagNestedWithoutTopLevelObject4.js (2 errors) ====
    /**
     * @param {number} xyz.bar.p
                       ~~~~~~~~~
!!! error TS8032: Qualified name 'xyz.bar.p' is not allowed without a leading '@param {object} xyz.bar'.
     */
    function g(xyz) {
               ~~~
!!! error TS7006: Parameter 'xyz' implicitly has an 'any' type.
        return xyz.bar.p;
    }